# CustomAuth-exemple

./: pyproject.toml
apps/user/: backends.py  managers.py  models.py
config/: settings.py
